Fix modal visibility from tasks-menu

--- a/src/app/layout/navbar/navbar.scss
+++ b/src/app/layout/navbar/navbar.scss
@@ -20,7 +20,7 @@ $navbar-font-color: #fff;
 }
 
 .navbar {
-
+  z-index: 1050;
   tasks-menu {
     &.friendship-menu {
       .tasks-icon {
